@@ -286,7 +286,9 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       maxChunks = chunksPerPkt;
     }
 
-    void writeData(byte[] inarray, int off, int len) {
+    synchronized void writeData(byte[] inarray, int off, int len)
+        throws ClosedChannelException {
+      checkBuffer();
       if (dataPos + len > buf.length) {
         throw new BufferOverflowException();
       }
@@ -294,7 +296,12 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       dataPos += len;
     }
 
-    void writeChecksum(byte[] inarray, int off, int len) {
+    synchronized void writeChecksum(byte[] inarray, int off, int len)
+        throws ClosedChannelException {
+      checkBuffer();
+      if (len == 0) {
+        return;
+      }
       if (checksumPos + len > dataStart) {
         throw new BufferOverflowException();
       }
@@ -305,7 +312,9 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
     /**
      * Write the full packet, including the header, to the given output stream.
      */
-    void writeTo(DataOutputStream stm) throws IOException {
+    synchronized void writeTo(DataOutputStream stm) throws IOException {
+      checkBuffer();
+
       final int dataLen = dataPos - dataStart;
       final int checksumLen = checksumPos - checksumStart;
       final int pktLen = HdfsConstants.BYTES_IN_INTEGER + dataLen + checksumLen;
@@ -349,7 +358,13 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       }
     }
 
-    private void releaseBuffer(ByteArrayManager bam) {
+    private synchronized void checkBuffer() throws ClosedChannelException {
+      if (buf == null) {
+        throw new ClosedChannelException();
+      }
+    }
+
+    private synchronized void releaseBuffer(ByteArrayManager bam) {
       bam.release(buf);
       buf = null;
     }
@@ -853,7 +868,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       closeResponder();       // close and join
       closeStream();
       streamerClosed = true;
-      closed = true;
+      setClosed();
       synchronized (dataQueue) {
         dataQueue.notifyAll();
       }
@@ -1865,6 +1880,14 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
     return sock;
   }
 
+  @Override
+  protected void checkClosed() throws IOException {
+    if (isClosed()) {
+      IOException e = lastException.get();
+      throw e != null ? e : new ClosedChannelException();
+    }
+  }
+
   //
   // returns the list of targets, if any, that is being currently used.
   //
@@ -2159,8 +2182,8 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
   private void waitAndQueueCurrentPacket() throws IOException {
     synchronized (dataQueue) {
       try {
-        // If queue is full, then wait till we have enough space
-        while (!closed && dataQueue.size() + ackQueue.size() > dfsClient.getConf().writeMaxPackets) {
+      // If queue is full, then wait till we have enough space
+        while (!isClosed() && dataQueue.size() + ackQueue.size() > dfsClient.getConf().writeMaxPackets) {
           try {
             dataQueue.wait();
           } catch (InterruptedException e) {
@@ -2358,8 +2381,9 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
             // So send an empty sync packet.
             currentPacket = createPacket(packetSize, chunksPerPacket,
                 bytesCurBlock, currentSeqno++);
-          } else {
+          } else if (currentPacket != null) {
             // just discard the current packet since it is already been sent.
+            currentPacket.releaseBuffer(byteArrayManager);
             currentPacket = null;
           }
         }
@@ -2415,7 +2439,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
     } catch (IOException e) {
       DFSClient.LOG.warn("Error while syncing", e);
       synchronized (this) {
-        if (!closed) {
+        if (!isClosed()) {
           lastException.set(new IOException("IOException flush:" + e));
           closeThreads(true);
         }
@@ -2480,7 +2504,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       long begin = Time.monotonicNow();
       try {
         synchronized (dataQueue) {
-          while (!closed) {
+          while (!isClosed()) {
             checkClosed();
             if (lastAckedSeqno >= seqno) {
               break;
@@ -2513,13 +2537,32 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
    * resources associated with this stream.
    */
   synchronized void abort() throws IOException {
-    if (closed) {
+    if (isClosed()) {
       return;
     }
     streamer.setLastException(new IOException("Lease timeout of "
         + (dfsClient.getHdfsTimeout()/1000) + " seconds expired."));
     closeThreads(true);
     dfsClient.endFileLease(fileId);
+  }
+
+  boolean isClosed() {
+    return closed;
+  }
+
+  void setClosed() {
+    closed = true;
+    synchronized (dataQueue) {
+      releaseBuffer(dataQueue, byteArrayManager);
+      releaseBuffer(ackQueue, byteArrayManager);
+    }
+  }
+  
+  private static void releaseBuffer(List<Packet> packets, ByteArrayManager bam) {
+    for(Packet p : packets) {
+      p.releaseBuffer(bam);
+    }
+    packets.clear();
   }
 
   // shutdown datastreamer and responseprocessor threads.
@@ -2536,7 +2579,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
     } finally {
       streamer = null;
       s = null;
-      closed = true;
+      setClosed();
     }
   }
 
@@ -2546,7 +2589,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
    */
   @Override
   public synchronized void close() throws IOException {
-    if (closed) {
+    if (isClosed()) {
       IOException e = lastException.getAndSet(null);
       if (e == null) {
         return;
@@ -2566,7 +2609,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
         closeInternal();
     }
     finally {
-      closed = true;
+      setClosed();
     }
   }
 
@@ -2745,14 +2788,6 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       this.sourceBlocks = new ArrayList(dfsClient.getLocatedBlocks(
               sourceFile, 0, Long.MAX_VALUE).getLocatedBlocks());
       Collections.sort(sourceBlocks, LocatedBlock.blockIdComparator);
-    }
-  }
-
-  @Override
-  protected void checkClosed() throws IOException {
-    if (closed) {
-      IOException e = lastException.get();
-      throw e != null ? e : new ClosedChannelException();
     }
   }
 
