@@ -170,6 +170,11 @@ Release 2.7.0 - UNRELEASED
     HDFS-7389. Named user ACL cannot stop the user from accessing the FS entity.
     (Vinayakumar B via cnauroth)
 
+    HDFS-6938. Cleanup javac warnings in FSNamesystem (Charles Lamb via wheat9)
+
+    HDFS-7358. Clients may get stuck waiting when using ByteArrayManager.
+    (szetszwo)
+
 Release 2.6.0 - 2014-11-15
 
   INCOMPATIBLE CHANGES
